results/SVCOMP/2-shot/log-BugTestGen119-2024_03_19_01_04_34.txt
import java.util.Random;

public class BugTestGen119 {
    //@ ensures \result ==> (booleanValue ==> \result == true) && (!booleanValue ==> \result == false);
    public static boolean main(String[] args) {
        boolean booleanValue = new Random().nextBoolean();

        String tmp = String.valueOf(booleanValue);
        if (booleanValue) return tmp.equals("true");
        else return tmp.equals("false");
    }
}
/home/max/Documents/JMLGPT/tmp/BugTestGen119.java:4: error: cannot find symbol
    //@ ensures \result ==> (booleanValue ==> \result == true) && (!booleanValue ==> \result == false);
                             ^
  symbol:   variable booleanValue
  location: class BugTestGen119
/home/max/Documents/JMLGPT/tmp/BugTestGen119.java:4: error: cannot find symbol
    //@ ensures \result ==> (booleanValue ==> \result == true) && (!booleanValue ==> \result == false);
                                                                    ^
  symbol:   variable booleanValue
  location: class BugTestGen119
2 errors

